@@ -1,3 +1,10 @@
+2022-06-01  Mark Wielaard  <mark@klomp.org>
+
+	* testfile-arm-flags.bz2: New test file.
+	* run-readelf-arm-flags.sh: New test.
+	* Makefile.am (TESTS): Add run-readelf-arm-flags.sh.
+	(EXTRA_DIST): Add readelf-arm-flags.sh and testfile-arm-flags.bz2
+
 2022-05-13  Noah Sanci  <nsanci@redhat.com>
 
 	* run-debuginfod-fd-prefetch-caches.sh: Rewritten.
