@@ -1,3 +1,9 @@
+2022-06-01  Ulrich Drepper  <drepper@redhat.com>
+
+	* Makefile.am (arm_SRCS): Add arm_machineflagname.c.
+	* arm_init.c (arm_init): Hook in arm_machine_flag_name.
+	* arm_machineflagname.c: New file.
+
 2022-02-16  Mark Wielaard  <mark@klomp.org>
 
 	* ppc_initreg.c (ppc_set_initial_registers_tid): Define struct
